project/logs/20250625_142730log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel:12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3D.VS.hlsl,profile:vs_6_0

Compile Succeeded,path:Object3D.VS.hlsl,profile:vs_6_0

Begin CompileShader,path:Object3D.PS.hlsl,profile:ps_6_0

Object3D.PS.hlsl:36:9: error: use of undeclared identifier 'output'
        output.color = gMaterial.color * textureColor * gDirectionalLight.color * cos * gDirectionalLight.intensity;
        ^
Object3D.PS.hlsl:36:42: error: use of undeclared identifier 'textureColor'
        output.color = gMaterial.color * textureColor * gDirectionalLight.color * cos * gDirectionalLight.intensity;
                                         ^
Object3D.PS.hlsl:40:9: error: use of undeclared identifier 'output'
        output.color = gMaterial.color * textureColor;
        ^
Object3D.PS.hlsl:40:42: error: use of undeclared identifier 'textureColor'
        output.color = gMaterial.color * textureColor;
                                         ^

